[gd_scene load_steps=16 format=3 uid="uid://conliaxesyag8"]

[ext_resource type="Script" path="res://data/modules/tactics/level/tactics_level.gd" id="1_4gyi1"]
[ext_resource type="Resource" uid="uid://c2mvnq00bfcw5" path="res://data/models/view/camera/tactics/camera.tres" id="2_u24sq"]
[ext_resource type="PackedScene" uid="uid://dwbmgds45ep4o" path="res://assets/maps/level/arena/test_arena.tscn" id="3_xw0fp"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/tactics_participant.gd" id="5_breuy"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/player/tactics_player.gd" id="7_3m485"]
[ext_resource type="PackedScene" uid="uid://6eofg7n4asn5" path="res://data/modules/tactics/level/pawn/pawn.tscn" id="8_08tl5"]
[ext_resource type="PackedScene" uid="uid://8x2rssxosm7i" path="res://data/modules/stats/expertise/expertise.tscn" id="9_3uf1v"]
[ext_resource type="Resource" uid="uid://14x26y1535he" path="res://data/models/world/stats/expertise/knight.tres" id="10_modns"]
[ext_resource type="Resource" uid="uid://1fetqfwxu88y" path="res://data/models/world/stats/expertise/archer.tres" id="11_4v8eo"]
[ext_resource type="Resource" uid="uid://dbrv0l6ndqgv3" path="res://data/models/world/stats/expertise/cleric.tres" id="12_f4qdh"]
[ext_resource type="Resource" uid="uid://decaxywkgyj1r" path="res://data/models/world/stats/expertise/chemist.tres" id="13_y5obl"]
[ext_resource type="Script" path="res://data/modules/tactics/level/participants/opponent/tactics_opponent.gd" id="14_t1tcx"]
[ext_resource type="Resource" uid="uid://c065vh6vqrtcc" path="res://data/models/world/stats/mobs/skeleton.tres" id="15_1gywj"]
[ext_resource type="Resource" uid="uid://geeqhoo6kxoi" path="res://data/models/world/stats/mobs/skeleton_mage.tres" id="16_pyi4y"]
[ext_resource type="Resource" uid="uid://exlkcu7d77lb" path="res://data/models/world/stats/mobs/skeleton_cpn.tres" id="17_b7l5f"]

[node name="TacticsLevel" type="Node3D"]
script = ExtResource("1_4gyi1")
camera = ExtResource("2_u24sq")
camera_boundary_radius = 13.0

[node name="TacticsArena" parent="." instance=ExtResource("3_xw0fp")]
unique_name_in_owner = true

[node name="TacticsParticipant" type="Node3D" parent="."]
script = ExtResource("5_breuy")

[node name="TacticsPlayer" type="Node3D" parent="TacticsParticipant"]
unique_name_in_owner = true
script = ExtResource("7_3m485")

[node name="Pawn" parent="TacticsParticipant/TacticsPlayer" instance=ExtResource("8_08tl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.46078, 2.51051, -5.5579)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer/Pawn" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("10_modns")

[node name="Pawn2" parent="TacticsParticipant/TacticsPlayer" instance=ExtResource("8_08tl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.498559, 2.51051, -7.41643)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer/Pawn2" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("11_4v8eo")

[node name="Pawn3" parent="TacticsParticipant/TacticsPlayer" instance=ExtResource("8_08tl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44726, 2.51051, -6.34305)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer/Pawn3" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("12_f4qdh")

[node name="Pawn4" parent="TacticsParticipant/TacticsPlayer" instance=ExtResource("8_08tl5")]
transform = Transform3D(0.999994, 0, 0.00338593, 0, 1, 0, -0.00338593, 0, 0.999994, 0.491854, 2.51051, -5.44529)

[node name="Expertise" parent="TacticsParticipant/TacticsPlayer/Pawn4" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("13_y5obl")

[node name="TacticsOpponent" type="Node3D" parent="TacticsParticipant"]
unique_name_in_owner = true
script = ExtResource("14_t1tcx")

[node name="Pawn" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.39464, -0.0246843, 5.53141)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("15_1gywj")

[node name="Pawn2" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.51029, -0.0246843, 4.72485)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn2" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("15_1gywj")

[node name="Pawn3" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 3.45316, -0.0246843, 6.52363)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn3" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("15_1gywj")

[node name="Pawn4" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.51222, -0.0246843, 7.41789)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn4" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("16_pyi4y")

[node name="Pawn5" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.52904, -0.0246843, 8.37854)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn5" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("16_pyi4y")

[node name="Pawn6" parent="TacticsParticipant/TacticsOpponent" instance=ExtResource("8_08tl5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.4708, -0.0246843, 9.43793)

[node name="Expertise" parent="TacticsParticipant/TacticsOpponent/Pawn6" instance=ExtResource("9_3uf1v")]
starting_stats = ExtResource("17_b7l5f")
